# cardwire

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arch-release-git.yml  arch-release.yml  ci-vm.yml  cicd.yml  format-check.yml  issue.yml  lint.yml  mdbook.yml  release.yml  sonarqube.yml  test-vm.yml  test.yml
.github/workflows/release/: arch-linux.yml
assets/: 99-cardwired.preset  cardwired.service  com.github.opengamingcollective.cardwire.conf
crates/cardwire-cli/: Cargo.toml
crates/cardwire-cli/src/: args.rs  dbus.rs  display.rs  main.rs
crates/cardwire-core/: Cargo.toml
crates/cardwire-core/src/: errors.rs
crates/cardwire-core/src/gpu/: discover.rs  ebpf.rs  errors.rs  mod.rs  models.rs
crates/cardwire-core/src/iommu/: errors.rs  groups.rs
crates/cardwire-core/src/pci/: errors.rs  iommu.rs  mod.rs  models.rs  pci_device.rs
crates/cardwire-daemon/: Cargo.toml
crates/cardwire-daemon/src/: config.rs  daemon.rs  dbus.rs  gpu_dbus.rs  listeners.rs  models.rs
crates/cardwire-daemon/src/analyzer/: README.md  dynamic_analysis.rs  mod.rs  models.rs  static_analysis.rs
crates/cardwire-daemon/src/core/: errors.rs  inode.rs  mod.rs
crates/cardwire-daemon/src/core/gpu/: discover.rs  ebpf.rs  mod.rs  models.rs
crates/cardwire-daemon/src/core/pci/: iommu.rs  mod.rs  models.rs  pci_device.rs
crates/cardwire-daemon/src/file/: common.rs  config.rs  db.rs  mod.rs  state.rs
crates/cardwire-daemon/src/interface/: apps.rs  config.rs  debug.rs  gpu.rs  mod.rs  mode.rs
crates/cardwire-daemon/src/profiler/: README.md  dynamic_analysis.rs  helper.rs  mod.rs  models.rs  static_analysis.rs
crates/cardwire-daemon/src/tasks/: battery_switch.rs  bpf_snitch.rs  fdo_list.rs  mod.rs  monitor_udev.rs  watch_power_state.rs
crates/cardwire-ebpf/: Cargo.toml  build.rs
crates/cardwire-ebpf/src/: bpf.c  bpf.h  errors.rs  helpers.h  lib.rs
crates/cardwire-gui/: Cargo.toml
crates/cardwire-gui/src/: app.rs  main.rs  message.rs  models.rs  ui.rs
crates/cardwire-gui/src/core/: dbus.rs
crates/cardwire-gui/src/helpers/: dbus.rs  mod.rs
docs/: SUMMARY.md  introduction.md  troubleshooting.md  usage.md
docs/dev/: dbus.md
docs/development/: bpf.md  build-dev.md  dbus.md
docs/diagnostics/: sleep.md  troubleshooting.md
docs/getting-started/: installation.md  requirements.md  usage.md
nix/: ci-15gpu.nix  ci-2gpu.nix  ci-3gpu.nix  default.nix  integration-test.nix  nixos-module.nix  test-vm.nix  vm-configuration.nix
