[workspace]
resolver = "2"
members = [
    "crates/cardwire-daemon",
    "crates/cardwire-cli",
    "crates/cardwire-ebpf",
]

[workspace.package]
version = "0.10.1"
authors = ["luytan <luytan@khora.me>"]
repository = "https://github.com/OpenGamingCollective/cardwire"
edition = "2024"
rust-version = "1.92.0"
license = "GPL-3.0"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
zbus = { version = "5.16.0", features = ["tokio", "option-as-array"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.32"
thiserror = "2.0.18"
clap_complete = "4.6.5" 
anyhow = "1.0.102"
env_logger = "0.11"
toml = "1.0.3"
aya = "0.13.1"
serde_json = "1.0.150"
tokio-stream = "0.1.18"
xdg = "3.0.0"
freedesktop-desktop-entry = "0.8.1"
udev = { version = "^0.9.3", features = ["send", "sync"] }

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
overflow-checks = true
