[package]
name = "cardwire-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for cardwire GPU management"

[dependencies]
cardwire-ebpf = { path = "../cardwire-ebpf" }
thiserror.workspace= true
log.workspace = true