[package]
name = "cardwire-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Daemon for cardwire GPU management"

[dependencies]
cardwire-ebpf = { path = "../cardwire-ebpf" }
tokio.workspace = true
zbus.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
env_logger.workspace = true
toml.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
aya.workspace = true
xdg.workspace = true
freedesktop-desktop-entry.workspace = true
udev.workspace = true

[[bin]]
name = "cardwired"
path = "src/daemon.rs"

[package.metadata.deb]
name = "cardwire"
maintainer = "luytan <luytan@khora.me>"
copyright = "2026, luytan"
section = "utils"
priority = "optional"
extended-description = """\
 GPU manager for Linux using eBPF LSM hooks."""
depends = "hwdata, dbus, systemd, upower, udev, libgcc-s1, libc6, libudev1"

assets = [
    ["target/release/cardwired", "usr/bin/", "755"],
    ["target/release/cardwire", "usr/bin/", "755"],
    ["../../assets/cardwired.service", "usr/lib/systemd/system/", "644"],
    ["../../assets/99-cardwired.preset", "usr/lib/systemd/system-preset/", "644"],
    ["../../assets/com.github.opengamingcollective.cardwire.conf", "usr/share/dbus-1/system.d/", "644"],
]
maintainer-scripts = "../../packages/debian/DEBIAN"
changelog = "../../packages/debian/changelog"