[package]
name = "cardwire-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GUI for cardwire GPU management"

[dependencies]
tokio.workspace = true
zbus.workspace = true
log.workspace = true
env_logger.workspace = true
iced.workspace = true
strum.workspace = true
serde.workspace = true


[[bin]]
name = "cardwire-gui"
path = "src/main.rs"
